# sentiment-analyzer

./: .gitignore  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml  requirements.txt  sentiment.db  sentiment.db-shm  sentiment.db-wal  shutdown.sh  startup.sh  status.sh
.github/workflows/: lint-and-test.yml  pylint.yml
backend/: app.py  data_service.py  dummy_data.py
backend/application/: analyse_comment_use_case.py  configure_monitor_service.py  configure_monitor_use_case.py  process_comment_service.py  raw_comment.py  services.py  sign_in_with_oauth_use_case.py
backend/application/ports/: comment_publisher.py  live_stream.py  message_broker.py  monitor_repository.py  oauth_provider.py  sentiment_analyzer.py  session_store.py  subreddit_resolver.py  user_repository.py
backend/domain/: __init__.py  comment.py  comment_publisher.py  comment_repository.py  monitor_repository.py  monitor_target.py  sentiment_service.py  user.py
backend/infrastructure/: composition.py  dependencies.py  fastapi_deps.py  monitor_config.py
backend/infrastructure/api/: app.py  auth.py  exception_handlers.py  requests.py  responses.py  schemas.py
backend/infrastructure/auth/: github_oauth_provider.py  redis_session_store.py
backend/infrastructure/messaging/: __init__.py  broker_factory.py  channels.py  kafka_broker.py  live_stream.py  message_broker.py  redis_broker.py  redis_comment_publisher.py  redis_live_event_stream.py  redis_live_stream.py  redis_stream_broker.py
backend/infrastructure/nlp/: textblob_analyzer.py
backend/infrastructure/pipeline/: consumer.py  producer.py  topics.py
backend/infrastructure/reddit/: __init__.py  subreddit_resolver.py
backend/infrastructure/repositories/: __init__.py  redis_monitor_repository.py  sqlite_repository.py  sqlite_user_repository.py
backend/tests/: __init__.py  app_test.py  data_service_test.py
backend/tests/application/: analyse_comment_use_case_test.py  app_test.py  comments_test.py  conftest.py  health_test.py  process_comment_service_test.py  raw_comment_test.py  security_test.py  sentiment_test.py  services_test.py  sign_in_with_oauth_use_case_test.py  stats_test.py
backend/tests/domain/: sentiment_service_test.py
backend/tests/infrastructure/: composition_test.py  conftest.py  dependencies_test.py  monitor_test.py
backend/tests/infrastructure/api/: auth_test.py  comments_test.py  conftest.py  health_test.py  security_test.py  sentiment_test.py  sse_test.py  stats_test.py
backend/tests/infrastructure/auth/: github_oauth_provider_test.py  redis_session_store_test.py
backend/tests/infrastructure/messaging/: broker_factory_test.py  kafka_broker_test.py  redis_broker_test.py  redis_comment_publisher_test.py  redis_live_event_stream_test.py  redis_live_stream_test.py  redis_stream_broker_test.py
backend/tests/infrastructure/nlp/: textblob_analyzer_test.py
backend/tests/infrastructure/pipeline/: conftest.py  consumer_test.py  producer_test.py
backend/tests/infrastructure/reddit/: subreddit_resolver_test.py
backend/tests/infrastructure/repositories/: conftest.py  redis_monitor_repository_test.py  sqlite_repository_test.py  sqlite_user_repository_test.py
data_pipeline/: README.md  consumer.py  producer.py
data_pipeline/tests/: consumer_test.py
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json
frontend/src/components/: AuthBar.css  AuthBar.jsx  Dashboard.css  Dashboard.jsx  MonitorControl.css  MonitorControl.jsx  RecentComments.css  RecentComments.jsx  SentimentChart.css  SentimentChart.jsx
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
kafka/: README.md  consumer.py  producer.py
