[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analyzer"
version = "0.1.0"
description = "Real-time sentiment analysis of Reddit comments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "praw>=7.7.1",
    "kafka-python>=2.0.2",
    "textblob>=0.18.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
]

# Package discovery configuration
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "kafka*"]
exclude = ["tests*", "docs*", "*.egg-info"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0330", "C0326"]

[tool.pylint.format]
max-line-length = "88"

# Pytest configuration for sentiment analyzer backend
[tool.pytest.ini_options]
# Test discovery
testpaths = ["backend/tests"]
python_files = "*_test.py"
python_classes = "Test*"
python_functions = "test_*"
# Output options
addopts = "-v --tb=short"
# Add project root to Python path for imports
pythonpath = ["."]
# Test markers (for organizing tests)
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "persistence: Tests involving file I/O",
    "threading: Tests involving threading",
    "api: API endpoint tests",
]
# Minimum version
minversion = "8.0"